- long swipe left: start of line (ctrl-a)
- long swipe right: end og line (ctrl-e)
- bigger gesture view area 
- pie menu fades in with a delay
- keyboard toggle via 1-finger-double-tap with a short delay
- reactivated the scrollbar display
- Makefile improved
- XCode project added
- initial landscape mode (unfinished)

- multiple terminals added (code merged from the multi branch) 
  this feature works best if the Default_MobileTerminal?.png and FSO_MobileTerminal?.png images are copied to /System/CoreServices/SpringBoard.app 
